attempts to fix text scaling and auto viewport scaling on iOS

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -19,6 +19,8 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
+
+  -webkit-text-size-adjust: 100%;
 }
 
 p {
